--- a/web/css/perfil.css
+++ b/web/css/perfil.css
@@ -1,130 +1,309 @@
-*{
-    box-sizing: border-box;
+/* header {
+    background: red;
 }
 
-/**********************************A partir de aquí********************************/
+main {
+    background: green;
+} */
 
-
-
-header h1{
-    align-self: center;
-    text-align: center;
+.visually-hidden {
+    position: absolute !important;
+    height: 1px;
+    width: 1px;
+    overflow: hidden;
+    clip: rect(1px, 1px, 1px, 1px);
 }
 
-
-
-
-header {grid-area: header;}
-main {grid-area: main;}
-aside {grid-area: aside;}
-footer {grid-area: footer;}
-
-.grid-container{
-    display: grid;
-    
-    grid-template-areas:
-        'header header header header'
-        'main main main main'
-        'aside aside aside aside'
-        'footer footer footer footer';
+header {
+    padding-top: 5%;
+    padding-bottom: 10%;
 }
-header{
-    display: grid;
+
+/* Profile Section */
+
+.profile-image {
+    float: left;
+    width: calc(33.333% - 1rem);
+    display: flex;
     justify-content: center;
+    align-items: center;
+    margin-right: 3rem;
 }
 
-aside section{
-    display: grid;
+.profile-image img {
+    border-radius: 50%;
 }
 
-main section{
-    display: grid;
+.profile-user-settings,
+.profile-stats,
+.profile-bio {
+    float: left;
+    width: calc(66.666% - 2rem);
 }
 
-footer{
-    display: grid;
+.profile-user-settings {
+    margin-top: 1.1rem;
 }
 
+.profile-user-name {
+    display: inline-block;
+    /* font-size: 3.2rem; */
+    font-weight: 300;
+}
 
-/*Menores de 768*/
-@media (max-width:767px){
+.btn-outline-secondary {
+    margin-left: 5%;
+    margin-top: -2%;
+  }
 
-header h1{
+.profile-stats {
+    margin-top: 2rem;
+    
+}
+
+.profile-stats li {
+    display: inline-block;
+    font-size: 1rem;
+    line-height: 1.5;
+    margin-right: 15%;
+    margin-left: -6%;
+    cursor: pointer;
+}
+
+.profile-stats li:last-of-type {
+    margin-right: 0;
+}
+
+.profile-bio {
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 1.5;
+    margin-top: 2.3rem;
+}
+
+.profile-real-name,
+.profile-stat-count
+/* .profile-edit-btn */{
+    font-weight: 600;
+}
+
+/* Gallery Section */
+
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -1rem -1rem;
+    padding-bottom: 3rem;
+}
+
+.gallery-item {
+    position: relative;
+    flex: 1 0 22rem;
+    margin: 1rem;
+    color: #fff;
+    cursor: pointer;
+}
+
+.gallery-item:hover .gallery-item-info,
+.gallery-item:focus .gallery-item-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.gallery-item-info {
     display: none;
 }
 
+.gallery-item-info li {
+    display: inline-block;
+    font-size: 1.7rem;
+    font-weight: 600;
 }
 
-/*Escritorio de 768 hacia arriba*/
-
-@media (min-width:768px){
-header{
-    grid-template-columns: 25% 75%;
+.gallery-item-likes {
+    margin-right: 2.2rem;
 }
 
-header img{
+.gallery-item-type {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 2.5rem;
+    text-shadow: 0.2rem 0.2rem 0.2rem rgba(0, 0, 0, 0.1);
+}
+
+.fa-clone,
+.fa-comment {
+    transform: rotateY(180deg);
+}
+
+.gallery-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* Loader */
+
+.loader {
+    width: 5rem;
+    height: 5rem;
+    border: 0.6rem solid #999;
+    border-bottom-color: transparent;
+    border-radius: 50%;
     margin: 0 auto;
+    animation: loader 500ms linear infinite;
 }
 
-aside section{
-    grid-template-columns: auto auto;
+/* Media Query */
+
+@media (max-width: 40rem) {
+    .profile {
+        display: flex;
+        flex-wrap: wrap;
+        padding: 4rem 0;
+    }
+
+    .profile::after {
+        display: none;
+    }
+
+    .profile-image,
+    .profile-user-settings,
+    .profile-bio,
+    .profile-stats {
+        float: none;
+        width: auto;
+    }
+
+    .profile-image img {
+        width: 7.7rem;
+    }
+
+    .profile-user-settings {
+        flex-basis: calc(100% - 10.7rem);
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 1rem;
+    }
+
+    .profile-user-name {
+        font-size: 2.2rem;
+    }
+
+    .profile-bio {
+        font-size: 1.4rem;
+        margin-top: 1.5rem;
+    }
+
+    .profile-edit-btn,
+    .profile-bio,
+    .profile-stats {
+        flex-basis: 100%;
+    }
+
+    .profile-stats {
+        order: 1;
+        margin-top: 1.5rem;
+    }
+
+    .profile-stats ul {
+        display: flex;
+        text-align: center;
+        padding: 1.2rem 0;
+        border-top: 0.1rem solid #dadada;
+        border-bottom: 0.1rem solid #dadada;
+    }
+
+    .profile-stats li {
+        font-size: 1rem;
+        flex: 1;
+        margin: 0;
+    }
+
+    .profile-stat-count {
+        display: block;
+    }
 }
 
-aside section h2{
-    grid-column: 1 / span 2;
+/* Spinner Animation */
+
+@keyframes loader {
+    to {
+        transform: rotate(360deg);
+    }
 }
 
-main section{
-    grid-template-columns: auto auto;
-}
+/*
 
-main section h2{
-    grid-column: 1 / span 2;
-}
+The following code will only run if your browser supports CSS grid.
 
-footer {
-    grid-template-columns: auto auto;
-}
-}
+Remove or comment-out the code block below to see how the browser will fall-back to flexbox & floated styling. 
 
-/*Escritorio de 992 hacia arriba*/
+*/
 
-@media (min-width:992px){
-
-    .grid-container{
+@supports (display: grid) {
+    .profile {
         display: grid;
-        
-        grid-template-areas:
-            'header header header header'
-            'aside main main main'
-            'footer footer footer footer';
+        grid-template-columns: 1fr 2fr;
+        grid-template-rows: repeat(3, auto);
+        grid-column-gap: 3rem;
+        align-items: center;
     }
 
-    aside section{
-        grid-template-columns: auto;
+    .profile-image {
+        grid-row: 1 / -1;
     }
 
-    aside section >*{
-        grid-column: 1 / span 1;
+    .gallery {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
+        grid-gap: 2rem;
+    }
+
+    .profile-image,
+    .profile-user-settings,
+    .profile-stats,
+    .profile-bio,
+    .gallery-item,
+    .gallery {
+        width: auto;
+        margin: 0;
+    }
+
+    @media (max-width: 40rem) {
+        .profile {
+            grid-template-columns: auto 1fr;
+            grid-row-gap: 1.5rem;
+        }
+
+        .profile-image {
+            grid-row: 1 / 2;
+        }
+
+        .profile-user-settings {
+            display: grid;
+            grid-template-columns: auto 1fr;
+            grid-gap: 1rem;
+        }
+
+        .profile-edit-btn,
+        .profile-stats,
+        .profile-bio {
+            grid-column: 1 / -1;
+        }
+
+        .profile-user-settings,
+        .profile-edit-btn,
+        .profile-bio,
+        .profile-stats {
+            margin: 0;
+        }
     }
 }
-
-/*Escritorio de 1200 hacia arriba*/
-
-@media (min-width:1200px){
-
-main section{
-    grid-template-columns: auto auto auto;
-}
-
-main section h2{
-    grid-column: 1 / span 3;
-}
-
-footer {
-    grid-template-columns: auto auto auto auto;
-}
-}
-
-/**********************************Hasta aquí********************************/
-
