--- a/web/css/perfil.css
+++ b/web/css/perfil.css
@@ -24,6 +24,7 @@ header {
 .profile-image {
     float: left;
     width: calc(33.333% - 1rem);
+    height: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
