--- a/web/css/perfil.css
+++ b/web/css/perfil.css
@@ -1,11 +1,3 @@
-/* header {
-    background: red;
-}
-
-main {
-    background: green;
-} */
-
 .visually-hidden {
     position: absolute !important;
     height: 1px;
@@ -23,8 +15,8 @@ header {
 
 .profile-image {
     float: left;
-    width: calc(33.333% - 1rem);
-    height: 50%;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -32,7 +24,10 @@ header {
 }
 
 .profile-image img {
+    display: block; 
     border-radius: 50%;
+    width: 100%;
+    height: 100%;
 }
 
 .profile-user-settings,
@@ -64,7 +59,6 @@ header {
 
 .profile-stats {
     margin-top: 2rem;
-    
 }
 
 .profile-stats li {
@@ -157,7 +151,7 @@ header {
 
 /* Loader */
 
-.loader {
+/* .loader {
     width: 5rem;
     height: 5rem;
     border: 0.6rem solid #999;
@@ -165,7 +159,7 @@ header {
     border-radius: 50%;
     margin: 0 auto;
     animation: loader 500ms linear infinite;
-}
+} */
 
 /* Media Query */
 
@@ -173,7 +167,8 @@ header {
     .profile {
         display: flex;
         flex-wrap: wrap;
-        padding: 4rem 0;
+        /* padding: 4rem 0; */
+        margin-top: -20%;
     }
 
     .profile::after {
@@ -185,11 +180,14 @@ header {
     .profile-bio,
     .profile-stats {
         float: none;
-        width: auto;
+        width: 100%;
+        height: 100%;
     }
 
     .profile-image img {
-        width: 7.7rem;
+        /* width: 7.7rem; */
+        width: 50%;
+        height: 50%;
     }
 
     .profile-user-settings {
@@ -236,15 +234,15 @@ header {
     .profile-stat-count {
         display: block;
     }
-}
+} 
 
 /* Spinner Animation */
 
-@keyframes loader {
+/* @keyframes loader {
     to {
         transform: rotate(360deg);
     }
-}
+} */
 
 /*
 
@@ -254,7 +252,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
 
 */
 
-@supports (display: grid) {
+@supports (display: grid) { 
     .profile {
         display: grid;
         grid-template-columns: 1fr 2fr;
@@ -273,7 +271,11 @@ Remove or comment-out the code block below to see how the browser will fall-back
         grid-gap: 2rem;
     }
 
-    .profile-image,
+
+    .profile-image {
+        width: 100%;
+        height: 100%;
+    }
     .profile-user-settings,
     .profile-stats,
     .profile-bio,
@@ -289,9 +291,9 @@ Remove or comment-out the code block below to see how the browser will fall-back
             grid-row-gap: 1.5rem;
         }
 
-        .profile-image {
+        /* .profile-image {
             grid-row: 1 / 2;
-        }
+        } */
 
         .profile-user-settings {
             display: grid;
@@ -312,4 +314,4 @@ Remove or comment-out the code block below to see how the browser will fall-back
             margin: 0;
         }
     }
-}
+} 
