--- a/web/css/site.css
+++ b/web/css/site.css
@@ -9,6 +9,7 @@ body {
 
 .wrap {
     min-height: 100%;
+    width: auto;
     height: auto;
     margin: 0 auto -60px;
     padding: 0 0 60px;
@@ -102,4 +103,15 @@ a.desc:after {
 .nav > li > form > button.logout:focus,
 .nav > li > form > button.logout:hover {
     background-color: transparent;
+}
+
+.foto {
+    width: 15%;
+}
+
+.foto img {
+    border-radius: 50%;
+    margin-right: 5%;
+    height: 30%;
+    width: 30%;
 }
