--- a/web/css/perfil.css
+++ b/web/css/perfil.css
@@ -47,7 +47,9 @@ header {
     font-weight: 300;
 }
 
-.btn-outline-secondary {
+ /* .btn-outline-secondary {  */
+    .dropdown-toggle {
+        
     margin-left: 5%;
     margin-top: -2%;
 }
