--- a/web/css/site.css
+++ b/web/css/site.css
@@ -9,8 +9,8 @@ body {
 
 .wrap {
     min-height: 100%;
-    width: auto;
-    height: auto;
+    /* width: auto; */
+    /* height: auto; */
     margin: 0 auto -60px;
     padding: 0 0 60px;
 }
@@ -111,7 +111,7 @@ a.desc:after {
 
 .foto img {
     border-radius: 50%;
-    margin-right: 5%;
+    /* margin-right: 5%; */
     height: 30%;
-    width: 30%;
+    width: 20%;
 }
