--- a/web/css/perfil.css
+++ b/web/css/perfil.css
@@ -15,8 +15,8 @@ header {
 
 .profile-image {
     float: left;
-    width: 100%;
-    height: 100%;
+    width: auto;
+    /* height: 100%; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -26,8 +26,8 @@ header {
 .profile-image img {
     display: block; 
     border-radius: 50%;
-    width: 100%;
-    height: 100%;
+    width: 200px;
+    height: 200px;
 }
 
 .profile-user-settings,
@@ -170,7 +170,7 @@ header {
         display: flex;
         flex-wrap: wrap;
         /* padding: 4rem 0; */
-        margin-top: -20%;
+        /* margin-top: -20%; */
     }
 
     .profile::after {
@@ -188,8 +188,8 @@ header {
 
     .profile-image img {
         /* width: 7.7rem; */
-        width: 50%;
-        height: 50%;
+        width: 50px;
+        height: 50px;
     }
 
     .profile-user-settings {
@@ -293,9 +293,9 @@ Remove or comment-out the code block below to see how the browser will fall-back
             grid-row-gap: 1.5rem;
         }
 
-        /* .profile-image {
+        .profile-image {
             grid-row: 1 / 2;
-        } */
+        }
 
         .profile-user-settings {
             display: grid;
