modifico la vista de publicaciones

--- a/web/css/indexPublicaciones.css
+++ b/web/css/indexPublicaciones.css
@@ -16,11 +16,11 @@
     bottom: 10%;
 }
 
-#dropdownMenuButton {
+/* #dropdownMenuButton {
     width: 10%;
     margin-left: auto;
-}
+} */
 
-.dropdown-menu{
+/* .dropdown-menu{
     width: 5% !important;
-}
+} */
