--- a/web/css/indexPublicaciones.css
+++ b/web/css/indexPublicaciones.css
@@ -24,3 +24,48 @@
 /* .dropdown-menu{
     width: 5% !important;
 } */
+
+
+
+
+/* .gallery-it {
+    position: relative;
+    flex: 1 0 22rem;
+    margin: 1rem;
+    color: #fff;
+    cursor: pointer;
+} */
+
+.card:hover .prueba button,
+.card:focus .prueba button {
+    display: flex;
+    /* justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3); */
+}
+
+.prueba button{
+    display: none;
+}
+
+/* .gallery-item-info li {
+    display: inline-block;
+    font-size: 1.7rem;
+    font-weight: 600;
+}
+
+.gallery-item-likes {
+    margin-right: 2.2rem;
+}
+
+.gallery-item-type {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 2.5rem;
+    text-shadow: 0.2rem 0.2rem 0.2rem rgba(0, 0, 0, 0.1);
+} */
