soluciono el problema de composer

--- a/web/css/site.css
+++ b/web/css/site.css
@@ -115,3 +115,19 @@ a.desc:after {
     height: 30px;
     width: 30px;
 }
+
+.glyphicon {
+    font-family: "Font Awesome 5 Free";
+}
+.glyphicon-eye-open:before {
+    content: "\f06e";
+    color: var(--success);
+}
+.glyphicon-pencil:before {
+    content: "\f044";
+    color: var(--primary);
+}
+.glyphicon-trash:before {
+    content: "\f2ed";
+    color: var(--danger);
+}
