--- a/web/css/indexPublicaciones.css
+++ b/web/css/indexPublicaciones.css
@@ -5,8 +5,8 @@
 }
 
 .contenido img {
-    width: 80%;
-    height: 80%;
+    width: 500px !important;
+    height: 500px!important;
 }
 
 .btn-primary {
