--- a/web/css/indexPublicaciones.css
+++ b/web/css/indexPublicaciones.css
@@ -4,9 +4,9 @@
     border-radius: 50%;
 }
 
-.contenido img {
-    width: 500px !important;
-    height: 500px!important;
+.tamano {
+    width: 100%;
+    height: 100%;
 }
 
 .btn-primary {
