--- a/web/css/perfil.css
+++ b/web/css/perfil.css
@@ -1,310 +1,229 @@
-.visually-hidden {
-    position: absolute !important;
-    height: 1px;
-    width: 1px;
-    overflow: hidden;
-    clip: rect(1px, 1px, 1px, 1px);
-}
-
-header {
-    padding-top: 5%;
-    padding-bottom: 10%;
-}
-
-
-/* Profile Section */
-
-.profile-image {
-    float: left;
-    width: auto;
-    /* height: 100%; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 3rem;
-}
-
-.profile-image img {
-    display: block;
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-}
-
-.profile-user-settings,
-.profile-stats,
-.profile-bio {
-    float: left;
-    width: calc(66.666% - 2rem);
-}
-
-.profile-user-settings {
-    margin-top: 1.1rem;
-}
-
-.profile-user-name {
-    display: inline-block;
-    /* font-size: 3.2rem; */
-    font-weight: 300;
-}
-
-
-/* .btn-outline-secondary {  */
-
-.dropdown-toggle {
-    margin-left: 5%;
-    margin-top: -2%;
-}
-
-.btn-outline-danger {
-    margin-left: 2%;
-    margin-top: -2%;
-}
-
-.profile-stats {
-    margin-top: 2rem;
-}
-
-.profile-stats li {
-    display: inline-block;
-    font-size: 1rem;
-    line-height: 1.5;
-    margin-right: 15%;
-    margin-left: -6%;
-    cursor: pointer;
-}
-
-.profile-stats li:last-of-type {
-    margin-right: 0;
-}
-
-.profile-bio {
-    font-size: 1.6rem;
-    font-weight: 400;
-    line-height: 1.5;
-    margin-top: 2.3rem;
-}
-
-.profile-real-name,
-.profile-stat-count
-/* .profile-edit-btn */
-
-{
-    font-weight: 600;
-}
-
-
-/* Gallery Section */
-
-.gallery {
-    display: flex;
-    flex-wrap: wrap;
-    margin: -1rem -1rem;
-    padding-bottom: 3rem;
-}
-
-.gallery-item {
-    position: relative;
-    flex: 1 0 22rem;
-    margin: 1rem;
-    color: #fff;
-    cursor: pointer;
-}
-
-.gallery-item:hover .gallery-item-info,
-.gallery-item:focus .gallery-item-info {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
-}
-
-.gallery-item-info {
-    display: none;
-}
-
-.gallery-item-info li {
-    display: inline-block;
-    font-size: 1.7rem;
-    font-weight: 600;
-}
-
-.gallery-item-likes {
-    margin-right: 2.2rem;
-}
-
-.gallery-item-type {
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    font-size: 2.5rem;
-    text-shadow: 0.2rem 0.2rem 0.2rem rgba(0, 0, 0, 0.1);
-}
-
-.fa-clone,
-.fa-comment {
-    transform: rotateY(180deg);
-}
-
-.gallery-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-
-/* Loader */
-
-
-/* .loader {
-    width: 5rem;
-    height: 5rem;
-    border: 0.6rem solid #999;
-    border-bottom-color: transparent;
-    border-radius: 50%;
-    margin: 0 auto;
-    animation: loader 500ms linear infinite;
-} */
-
-
-/* Media Query */
-
-@media (max-width: 40rem) {
-    .profile {
+    .visually-hidden {
+        position: absolute !important;
+        height: 1px;
+        width: 1px;
+        overflow: hidden;
+        clip: rect(1px, 1px, 1px, 1px);
+    }
+    
+    header {
+        padding-top: 5%;
+        padding-bottom: 10%;
+    }
+    /* Profile Section */
+    
+    .profile-image {
+        float: left;
+        width: auto;
         display: flex;
-        flex-wrap: wrap;
-        /* padding: 4rem 0; */
-        /* margin-top: -20%; */
-    }
-    .profile::after {
-        display: none;
-    }
-    .profile-image,
-    .profile-user-settings,
-    .profile-bio,
-    .profile-stats {
-        float: none;
-        width: 100%;
-        height: 100%;
-    }
-    .profile-image img {
-        /* width: 7.7rem; */
-        width: 50px;
-        height: 50px;
-    }
-    .profile-user-settings {
-        flex-basis: calc(100% - 10.7rem);
-        display: flex;
-        flex-wrap: wrap;
-        margin-top: 1rem;
-    }
-    .profile-user-name {
-        font-size: 2.2rem;
-    }
-    .profile-bio {
-        font-size: 1.4rem;
-        margin-top: 1.5rem;
-    }
-    .profile-edit-btn,
-    .profile-bio,
-    .profile-stats {
-        flex-basis: 100%;
-    }
-    .profile-stats {
-        order: 1;
-        margin-top: 1.5rem;
-    }
-    .profile-stats ul {
-        display: flex;
-        text-align: center;
-        padding: 1.2rem 0;
-        border-top: 0.1rem solid #dadada;
-        border-bottom: 0.1rem solid #dadada;
-    }
-    .profile-stats li {
-        font-size: 1rem;
-        flex: 1;
-        margin: 0;
-    }
-    .profile-stat-count {
-        display: block;
-    }
-}
-
-
-/* Spinner Animation */
-
-
-/* @keyframes loader {
-    to {
-        transform: rotate(360deg);
-    }
-} */
-
-
-/*
-
-The following code will only run if your browser supports CSS grid.
-
-Remove or comment-out the code block below to see how the browser will fall-back to flexbox & floated styling. 
-
-*/
-
-@supports (display: grid) {
-    .profile {
-        display: grid;
-        grid-template-columns: 1fr 2fr;
-        grid-template-rows: repeat(3, auto);
-        grid-column-gap: 3rem;
+        justify-content: center;
         align-items: center;
+        margin-right: 3rem;
     }
-    .profile-image {
-        grid-row: 1 / -1;
+    
+    .profile-image img {
+        display: block;
+        border-radius: 50%;
+        width: 200px;
+        height: 200px;
     }
-    .gallery {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
-        grid-gap: 2rem;
-    }
-    .profile-image {
-        width: 100%;
-        height: 100%;
-    }
+    
     .profile-user-settings,
     .profile-stats,
-    .profile-bio,
-    .gallery-item,
-    .gallery {
-        width: auto;
-        margin: 0;
+    .profile-bio {
+        float: left;
+        width: calc(66.666% - 2rem);
     }
+    
+    .profile-user-settings {
+        margin-top: 1.1rem;
+    }
+    
+    .profile-user-name {
+        display: inline-block;
+        font-weight: 300;
+    }
+    
+    .dropdown-toggle {
+        margin-left: 5%;
+        margin-top: -2%;
+    }
+    
+    .btn-outline-danger {
+        margin-left: 2%;
+        margin-top: -2%;
+    }
+    
+    .profile-stats {
+        margin-top: 2rem;
+    }
+    
+    .profile-stats li {
+        display: inline-block;
+        font-size: 1rem;
+        line-height: 1.5;
+        margin-right: 15%;
+        margin-left: -6%;
+        cursor: pointer;
+    }
+    
+    .profile-stats li:last-of-type {
+        margin-right: 0;
+    }
+    
+    .profile-bio {
+        font-size: 1.6rem;
+        font-weight: 400;
+        line-height: 1.5;
+        margin-top: 2.3rem;
+    }
+    
+    .profile-real-name,
+    .profile-stat-count {
+        font-weight: 600;
+    }
+    /* Gallery Section */
+    
+    .gallery-item {
+        position: relative;
+        flex: 1 0 22rem;
+        margin: 1rem;
+        color: #fff;
+        cursor: pointer;
+    }
+    
+    .gallery-item:hover .gallery-item-info,
+    .gallery-item:focus .gallery-item-info {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.3);
+    }
+    
+    .gallery-item-info {
+        display: none;
+    }
+    
+    .gallery-item-info li {
+        font-size: 1.7rem;
+        font-weight: 600;
+    }
+    
+    .gallery-image {
+        width: 100%;
+        height: 100%;
+    }
+    /* Media Query */
+    
     @media (max-width: 40rem) {
         .profile {
-            grid-template-columns: auto 1fr;
-            grid-row-gap: 1.5rem;
+            display: flex;
+            flex-wrap: wrap;
         }
-        .profile-image {
-            grid-row: 1 / 2;
+        .profile::after {
+            display: none;
+        }
+        .profile-image,
+        .profile-user-settings,
+        .profile-bio,
+        .profile-stats {
+            float: none;
+            width: 100%;
+            height: 100%;
+        }
+        .profile-image img {
+            width: 50px;
+            height: 50px;
         }
         .profile-user-settings {
-            display: grid;
-            grid-template-columns: auto 1fr;
-            grid-gap: 1rem;
+            flex-basis: calc(100% - 10.7rem);
+            display: flex;
+            flex-wrap: wrap;
+            margin-top: 1rem;
         }
-        .profile-edit-btn,
-        .profile-stats,
+        .profile-user-name {
+            font-size: 2.2rem;
+        }
         .profile-bio {
-            grid-column: 1 / -1;
+            font-size: 1.4rem;
+            margin-top: 1.5rem;
         }
-        .profile-user-settings,
         .profile-edit-btn,
         .profile-bio,
         .profile-stats {
+            flex-basis: 100%;
+        }
+        .profile-stats {
+            order: 1;
+            margin-top: 1.5rem;
+        }
+        .profile-stats ul {
+            display: flex;
+            text-align: center;
+            padding: 1.2rem 0;
+            border-top: 0.1rem solid #dadada;
+            border-bottom: 0.1rem solid #dadada;
+        }
+        .profile-stats li {
+            font-size: 1rem;
+            flex: 1;
             margin: 0;
         }
+        .profile-stat-count {
+            display: block;
+        }
     }
-}
+    
+    @supports (display: grid) {
+        .profile {
+            display: grid;
+            grid-template-columns: 1fr 2fr;
+            grid-template-rows: repeat(3, auto);
+            grid-column-gap: 3rem;
+            align-items: center;
+        }
+        .profile-image {
+            grid-row: 1 / -1;
+        }
+        .profile-image {
+            width: 100%;
+            height: 100%;
+        }
+        .profile-user-settings,
+        .profile-stats,
+        .profile-bio,
+        .gallery-item,
+        .gallery {
+            /* width: auto; */
+            margin: 0;
+        }
+        @media (max-width: 40rem) {
+            .profile {
+                grid-template-columns: auto 1fr;
+                grid-row-gap: 1.5rem;
+            }
+            .profile-image {
+                grid-row: 1 / 2;
+            }
+            .profile-user-settings {
+                display: grid;
+                grid-template-columns: auto 1fr;
+                grid-gap: 1rem;
+            }
+            .profile-edit-btn,
+            .profile-stats,
+            .profile-bio {
+                grid-column: 1 / -1;
+            }
+            .profile-user-settings,
+            .profile-edit-btn,
+            .profile-bio,
+            .profile-stats {
+                margin: 0;
+            }
+        }
+    }
