--- a/web/css/site.css
+++ b/web/css/site.css
@@ -131,3 +131,8 @@ a.desc:after {
     content: "\f2ed";
     color: var(--danger);
 }
+
+.invalid-feedback {
+    color: #e74a3b;
+    display: block;
+}
