--- a/web/css/indexPublicaciones.css
+++ b/web/css/indexPublicaciones.css
@@ -35,3 +35,18 @@
 .comentario:focus button {
     display: inline;
 }
+
+.enlace {
+    display:inline;
+    border:0;
+    padding:0;
+    margin:0;
+    background:none;
+    text-decoration: none;
+    color: black;
+}
+
+.enlace:hover {
+    color: black;
+    text-decoration: none ;
+}
