--- a/web/css/perfil.css
+++ b/web/css/perfil.css
@@ -198,7 +198,6 @@
         .profile-bio,
         .gallery-item,
         .gallery {
-            /* width: auto; */
             margin: 0;
         }
         @media (max-width: 40rem) {
@@ -226,4 +225,19 @@
                 margin: 0;
             }
         }
+    }
+
+    .enlace {
+        display:inline;
+        border:0;
+        padding:0;
+        margin:0;
+        background:none;
+        text-decoration: none;
+        color: black;
+    }
+    
+    .enlace:hover {
+        color: black;
+        text-decoration: none ;
     }
